Finishing the app to include a new camera intent.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="button_share">Share This Text</string>
     <string name="share_text_with">"Share this text with: "</string>
 
+    <string name="camera_button_text">Take a picture</string>
+
 </resources>
